02-deployment-sample-cluster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
spec:
  selector:
    matchLabels:
      app: dotnet1
  replicas: 1
  template:
    metadata:
      labels:
        app: dotnet1
    spec:
      containers:
        - name: dotnet1
          image: mcr.microsoft.com/dotnet/samples:aspnetapp
          resources:
            requests:
              cpu: 512m
              memory: 512Mi
            limits:
              cpu: 1.0
              memory: 1024Mi
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: 256m
              memory: 256Mi
            limits:
              cpu: 1.0
              memory: 1024Mi
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: dotnet1
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: dotnet1

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: nginx
